add dtos and mapper in User